2013-09-18  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php,
	include/functions_db.php,
	operation/incidents/incident_dashboard.php: Fixed a problem
	filtering incidents without type.

2013-09-17  Sancho Lerena <slerena@artica.es>

	* include/functions_incidents.php: Simplified the layout
	on the listing view of incidents. Removed the "flags" column
	(last WU owner is shown now under a tooltip in the "talk"
	icon), other "flags" are not really useful (email, file, 
	participants, etc). Also simplified shown of updated/started
	dates if they are the same, only show one of them.

2013-09-17  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php,
	operation/incidents/incident_tracking.php: Fixed a bug
	which shows incident statistic view without data.
	* operation/search.php: Fixed a table layout in general 
	search.

2013-09-17  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/functions_incidents.php,
	operation/incidents/incident_dashboard.php: Fixed several
	errors related to ACLs and mistakes counting incidents in
	dashboard view.

2013-09-17  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  extras/migrate.sql
	  include/functions_inventories.php
	  operation/inventories/inventory_search.php: Show inventories
	without object type in treeview.

2013-09-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/side_menu.php: Fixed the incident search from
	the side menu.

2013-09-17  Vanessa Gil <vanessa.gil@artica.es>

	* operation/download/browse.php: Fixed bug: You can't
	upload files to File Releases section.

2013-09-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/side_menu.php: Fixed the incident search from
	the side menu.
	
2013-09-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/ajax/crm.php: Fixed the ajax company search.

2013-09-17  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_calendar.php: Fixed bad count