@@ -1,3 +1,9 @@
+2013-09-18  Vanessa Gil <vanessa.gil@artica.es>
+
+	* include/functions.php
+	  include/js/integria_inventory.js: Fixed bug:
+	inventory pagination doesn't works.
+
 2013-09-18  Dario Rodriguez <dario@artica.es>
 
 	* include/functions_incidents.php,
